added splash screen resources

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="bolt_blue">#2EB875</color>
+    <color name="bolt_green">#2EB875</color>
 </resources>
